--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css" type="text/css">
 	<link rel="stylesheet" href="assets/css/style.css" type="text/css">
 	<link rel="stylesheet" href="assets/css/Home.css" type="text/css">
+	<link rel="stylesheet" href="assets/css/rule.css" type="text/css">
+
+
 
 
 
@@ -573,22 +576,22 @@
 							<h3 class = "mt-3">عمل مشروع مربح جداً</h3>
 						</div>
 						<div class = "col-lg-8 col-md-6">
-								<h2 ><a href=""><img src="assets/img/leadership.png" width = "20px" alt=""></a>&nbsp;&nbsp;
+								<h2 ><a href=""><img src="assets/img/types.png" width = "20px" alt=""></a>&nbsp;&nbsp;
 								منوعات
 							</h2>
 							<p class = "lineP">_______________________________________________________</p>
 							<div class = "row">
-							<div class = "col-lg-6">
-									<img src="assets/img/passion-780x405.png" width = "290px" alt="">
+							<div class = "col-lg-6 col-md-3 SpanTypes">
+									<img src="assets/img/ola.png" width = "290px" alt="">
 									<span>03 أكتوبر 2019</span>
 			
-									<h3 class = "mt-3">عمل مشروع مربح جداً</h3>
+									<h3 class = "mt-3">تضامناً مع مُذيعة سعودية.. علا الفارس تهاجم "MBC" بشدة</h3>
 							</div>
-							<div class = "col-lg-6">
-									<img src="assets/img/passion-780x405.png" width = "290px" alt="">
+							<div class = "col-lg-6 col-md-3 SpanTypes">
+									<img src="assets/img/donia.png" width = "290px" alt="">
 									<span>03 أكتوبر 2019</span>
 			
-									<h3 class = "mt-3">عمل مشروع مربح جداً</h3>
+									<h3 class = "mt-3">بعد حمية غذائية قاسية.. شاهد: نحافة الفنانة دنيا سمير غانم تصدم متابعيها</h3>
 							</div>
 						</div>
 						</div>
@@ -652,7 +655,52 @@
 		</div>
 	<!---------bodySection ends------------------->
 
+ <!---footer section start-->
+	<!---first row start-->
+	<div class="clearfix footerSection">
+		<div class = "container">
+			<a class = "mt-5 float-right linkFooter " href ="">المقالات والتعليقات لا تعبر عن رأي الموقع بل تعبر عن رأي الكاتب نفسه وللإبلاغ عن مقالة أو تعليق مخالف ارسل بلاغ</a>
+			<ul class="nav float-left navFooter">
+					<li class="nav-item">
+						<a class="nav-link " href="#">تواصل معنا</a>
+					</li>
+					<li class="nav-item ">
+						<a class="nav-link" href="#">الشروط والأحكام</a>
+					</li>
+					<li class="nav-item ">
+						<a class="nav-link" href="#">سياسة الخصوصية</a>
+					</li>
+			</ul>
+	<!---first row end-->
+	<!---secound row start-->
+			<a class = "mt-5 float-right linkFooter " href ="">جميع الحقوق محفوظة لدى ذهنك 2019©</a>
+				<ul class="nav float-left navFooter lastIcon">
+						<li class="nav-item">
+							<a class="nav-link " href="#"><i class="fab fa-youtube"></i></a>
+						</li>
+						<li class="nav-item ">
+							<a class="nav-link" href="#"><i class="fab fa-snapchat-ghost"></i></a>
+						</li>
+						<li class="nav-item ">
+							<a class="nav-link" href="#"><i class="fab fa-linkedin-in"></i></a>
+						</li>
+						<li class="nav-item ">
+								<a class="nav-link" href="#"><i class="fab fa-instagram"></i></a>
+						</li>
+						<li class="nav-item ">
+								<a class="nav-link" href="#"><i class="fab fa-twitter"></i></a>
+						</li>
+						<li class="nav-item ">
+								<a class="nav-link" href="#"><i class="fab fa-facebook-f"></i></a>
+						</li>
+				</ul>
 
+	<!---secound row end-->
+
+
+			</div>
+		</div>  
+    <!---footer end-->
 
 
 
